# jpp

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  build.sh  config.mk
benches/: CMakeLists.txt  build.sh
benches/src/: main.cpp
example/: main.cpp
include/: branch_over.hpp
include/jpp/: branch_over.hpp  enum.hpp  function_helpers.hpp  match_overload.hpp  parameter_pack_reduction.hpp  unroll.hpp
include/sak/: static_if.hpp  unroll.hpp
include/sak/meta/: static_if.hpp  static_switch.hpp  unroll.hpp
src/: main.cpp
tests/: Makefile  config.mk  prog
tests/include/: testing.hpp
tests/src/: main.cpp  test_branch_over.cpp  test_enum.cpp  test_match_overload.cpp  test_parameter_pack_reduction.cpp  test_unroll.cpp
